style: Fix alignment and height issues

--- a/src/components/about/hero/aboutHero.module.scss
+++ b/src/components/about/hero/aboutHero.module.scss
@@ -7,8 +7,11 @@
   flex-direction: column-reverse;
   justify-content: space-between;
   align-items: center;
-  height: 70vh;
+  min-height: 70vh;
   margin-bottom: 5rem;
+  max-width: 80vw;
+  margin-left: auto;
+  margin-right: auto;
   @media (min-width: 992px) {
     flex-direction: row;
   }
@@ -30,8 +33,8 @@
       @include header-font;
       text-transform: uppercase;
       font-family: Open Sans;
-      .yellowText{
-        color: #FEA759;
+      .yellowText {
+        color: #fea759;
       }
     }
     p {
@@ -52,21 +55,21 @@
   }
 }
 
- @media (max-width: 768px) {
-   .header{
- @include container;
-  display: flex;
-  flex-direction: column;
-  flex-direction: column-reverse;
-  justify-content: space-between;
-  align-items: center;
-  height: 100vh;
-  margin-bottom: 5rem;
-  .text{ 
-    p{
-     padding:1rem 2rem;
-     text-align: center;
- }
- }
-   }
- }
+@media (max-width: 768px) {
+  .header {
+    @include container;
+    display: flex;
+    flex-direction: column;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 100vh;
+    margin-bottom: 5rem;
+    .text {
+      p {
+        padding: 1rem 2rem;
+        text-align: center;
+      }
+    }
+  }
+}
